syntax = "proto3";

package calculator;

option go_package = "go-grpc-calculator-service/pb/calculator;calculator";

message CalculatorRequest {
  int64 n = 1;
}