syntax = "proto3";

package calculator;

option go_package = "go-grpc-calculator-service/pb/calculator;calculator";

message CalculatorReturn { 
  int64 result = 1; 
}